put the reviews section inside a container and fixed table booking positioning to be after the reviews(they were overlapping with each other)

--- a/OuiWebsite/css/style.css
+++ b/OuiWebsite/css/style.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: "BookItalic";
-    src: url("Project/fonts/shellypalmer-circular-std-book-italic.ttf");
+    src: url("../fonts/shellypalmer-circular-std-book-italic.ttf");
 }
 
 @font-face {
